--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -31,7 +31,7 @@ Assigned readings and labs will be posted to this page on a weekly basis.
 
 ### Slides:
 
--   Lecture 1: [Linear Regression II](https://github.com/MaRo406/eds-232-machine-learning/blob/main/docs/slides/Week2_slides_Regression%20II.pdf)
+-   Lecture: [Linear Regression II](https://github.com/MaRo406/eds-232-machine-learning/blob/main/docs/slides/Week2_slides_Regression%20II.pdf)
 
 ### Assigned Reading:
 
@@ -48,7 +48,7 @@ Assigned readings and labs will be posted to this page on a weekly basis.
 
 ### Slides:
 
--   Lecture 1: [Model Process and Regularized Regression](https://ucsb.box.com/s/qepqy1ndet8x51ym6rrv51y09k6qbug1)
+-   Lecture: [Model Process and Regularized Regression](https://ucsb.box.com/s/qepqy1ndet8x51ym6rrv51y09k6qbug1)
 
 ### Assigned Reading:
 
@@ -69,7 +69,7 @@ Assigned readings and labs will be posted to this page on a weekly basis.
 
 ### Slides:
 
--   Lecture 1: [Classification and Logistic Regression](https://ucsb.box.com/s/k9vnorvgepeny78ulvku6tjqxrw8djkt)
+-   Lecture: [Classification and Logistic Regression](https://ucsb.box.com/s/k9vnorvgepeny78ulvku6tjqxrw8djkt)
 
 ### Assigned Reading:
 
@@ -88,6 +88,22 @@ These will help you with Lab 4.
 -   [Link to the Lab 4 Demo](https://raw.githubusercontent.com/MaRo406/eds-232-machine-learning/44053f8cfa4392d0a10edad2b4b3c1df83e7106e/Lab4_Demo.Rmd)
 
 -   [Link to Lab 4 Assignment](https://github.com/MaRo406/eds-232-machine-learning/blob/main/Lab4.Rmd)
+
+### Week 5
+
+###  Slides:
+
+-   Lecture:
+
+### Assigned Reading:
+
+-   [HOML Ch. 8,9,10](https://bradleyboehmke.github.io/HOML/knn.html)
+
+### Supplementary Reading:
+
+-   [Decision tree scrollytelling](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/) - cool visualization of decision trees -- check it out!
+
+### Lab:
 
 <!-- \### Assignment materials and dates -->
 
