--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -91,7 +91,7 @@ These will help you with Lab 4.
 
 ### Week 5
 
-###  Slides:
+### Slides:
 
 -   Lecture: [k-Nearest Neighbors and Decision Trees](https://ucsb.box.com/s/ghfshuqf4isbu4kswigi3gtoehzszb30)
 
@@ -104,6 +104,8 @@ These will help you with Lab 4.
 -   [Decision tree scrollytelling](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/) - cool visualization of decision trees -- check it out!
 
 ### Lab:
+
+-   [Link to the Lab 5 Demo](https://github.com/MaRo406/eds-232-machine-learning/blob/main/Lab5_Demo.Rmd)
 
 <!-- \### Assignment materials and dates -->
 
