--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -109,6 +109,18 @@ These will help you with Lab 4.
 
 -   [Lab 5](https://github.com/MaRo406/eds-232-machine-learning/commit/944478ebad02534a4c36cf68ec598c7b4eef27dc)
 
+### Week 6
+
+### Slides:
+
+### Assigned Reading:
+
+-   [HOML Ch. 11](https://bradleyboehmke.github.io/HOML/random-forest.html)
+
+### Supplementary Reading:
+
+### Lab:  
+
 <!-- \### Assignment materials and dates -->
 
 <!-- | Assignment materials | Assigned | Due date | -->
