--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -107,11 +107,11 @@ These will help you with Lab 4.
 
 -   [Link to the Lab 5 Demo](https://github.com/MaRo406/eds-232-machine-learning/blob/main/Lab5_Demo.Rmd)
 
--   [Lab 5](https://github.com/MaRo406/eds-232-machine-learning/commit/944478ebad02534a4c36cf68ec598c7b4eef27dc)
+-   [Lab 5 -- Updated](https://github.com/MaRo406/eds-232-machine-learning/blob/main/Lab5_update.Rmd)
 
 ### Week 6
 
-### Slides: 
+### Slides:
 
 -   Lecture: [Bagging and Random Forests](https://ucsb.box.com/s/j6oxm4gct9uy1xxhv0zk42tzeqod456i)
 
@@ -121,7 +121,9 @@ These will help you with Lab 4.
 
 ### Supplementary Reading:
 
-### Lab:
+### Lab: 
+
+-   Demo
 
 <!-- \### Assignment materials and dates -->
 
