Assignments: Lab 6 In-class Slides

--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -146,6 +146,7 @@ These will help you with Lab 4.
 ### Slides:
 
 -   [Boosted Trees](https://ucsb.box.com/s/mh4h340psket990lhhlla9bgsj8dd9ld)
+-   [Lab 6 In Class](https://ucsb.box.com/s/5p37wn84qhqxig5sabs6zxh9kga3wiva)
 
 ### Assigned Reading:
 
