--- a/index.Rmd
+++ b/index.Rmd
@@ -81,7 +81,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 ## Tentative topics
 
 | Week \# | Dates            | Lecture                                                        |
-|---------|------------------|----------------------------------------------------------------|
+|--------------|--------------|---------------------------------------------|
 | 1       | 1/9, 1/11        | Introduction, Linear Regression and ML Modeling Fundamentals I |
 | 2       | MLK, 1/18        | Linear Regression and ML Modeling Fundamentals II              |
 | 3       | 1/23, 1/25       | Regularized Regression                                         |
@@ -91,4 +91,4 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 | 7       | Presidents, 2/22 | Ethics, Justice, Bias -- Guest Speaker                         |
 | 8       | 2/27, 3/1        | Gradient Boosting                                              |
 | 9       | 3/6, 3/8         | Clustering                                                     |
-| 10      | 3/13, 3/15       | Deep Learning or Support Vectors                               |
+| 10      | 3/13, 3/15       | Kaggle                                                         |
