--- a/index.Rmd
+++ b/index.Rmd
@@ -32,13 +32,11 @@ Machine learning is a field of inquiry devoted to understanding and building met
 
 **Instructor:** Mateo Robbins (mjrobbins\@ucsb.edu)
 
--   **Office: Bren**
--   **Office hours:** **Tuesday 10:45-11:45pm**
+-   **Student hours:** Thursday 10:45-11:45pm (Location: Bren 1424)
 
-**Teaching assistant: Allie Coughman**
+**Teaching assistant:** Allie Caughman (acaughman\@bren.ucsb.edu)
 
--   **Office: TBD**
--   **Office hours: TBD**
+-   **Student hours:** Tuesday 3:00-4:00pm (Location: Bren 4328)
 
 ## Important links
 
@@ -50,9 +48,9 @@ Machine learning is a field of inquiry devoted to understanding and building met
 
 -   **Section:**
 
-    -   First 5 weeks:Th 2:00pm - 2:50pm, 3:00 - 3:50pm
+    -   First 5 weeks: Th 2:00pm - 2:50pm, 3:00 - 3:50pm
 
-    -   2/15 onward: Th 12:30 - 1:20pm, 1:30 - 2:20pm
+    -   2/15 and onward: Th 12:30 - 1:20pm, 1:30 - 2:20pm
 
 ## Learning objectives
 
