--- a/index.Rmd
+++ b/index.Rmd
@@ -88,7 +88,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 |-------------|-------------|-----------------------------------------------|
 | Week \# | Dates      | Lecture                                                        |
 | 1       | 1/9, 1/11  | Introduction, Linear Regression and ML Modeling Fundamentals I |
-| 2       | 1/16, 1/18 | Linear Regression, ML Modeling Fundamentals II                 |
+| 2       | 1/16, 1/18 | Linear Regression and ML Modeling Fundamentals II              |
 | 3       | 1/23, 1/25 | Regularized Regression                                         |
 | 4       | 1/30, 2/1  | Logistic Regression, Classification                            |
 | 5       | 2/6, 2/8   | K-nearest neighbors, Decision Trees                            |
