--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -13,9 +13,14 @@ Assigned readings and labs will be posted to this page on a weekly basis.
 ### Slides:
 
 -   Lecture 1: [Course Welcome and Intro](https://ucsb.app.box.com/file/1409385618047)
+-   Lecture 2: [Linear Regression I](https://ucsb.box.com/s/b2jc24p3lwfcize0a288it9yavfi0h05)
 
 ### Assigned Reading:
 
 -   [HOML Ch. 1 (1.1 - 1.4)](https://bradleyboehmke.github.io/HOML/intro.html)
+
+*Supplementary Reading*
+
+-   [*Get Started with TidyModels - Section 2.*](https://www.tidymodels.org/start/recipes/)
 
 ### 
