--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -40,3 +40,9 @@ Assigned readings and labs will be posted to this page on a weekly basis.
 
 -   [Tidy Models in R Ch. 3 (3.3-3.5)](https://www.tmwr.org/base-r.html#tidiness-modeling)
     -   Intro to Tidy Modeling. Provides some context for Lab 1 and beyond.
+
+## Week 3
+
+### Slides:
+
+### Assigned Reading:
