--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -43,6 +43,11 @@ Lecture 1: [Model Process and Ridge Regression](https://ucsb.box.com/s/ec2qc93xm
 
 -   [Tidy Models in R Ch. 3 (3.3-3.5)](https://www.tmwr.org/base-r.html#tidiness-modeling)
     -   Intro to Tidy Modeling. Provides some context for Lab 1 and beyond.
+    
+### Discussion
+
+-   Download discussion template [here](discussion/week2_skeleton.Rmd)
+-   Download discussion data [here](https://drive.google.com/drive/folders/1hvGcwg3ELv-Hp14pjefCeEjTIWg-4Odv?usp=drive_link)
 
 ## Week 3
 
