--- a/docs/discussion/week2.Rmd
+++ b/docs/discussion/week2.Rmd
@@ -182,7 +182,7 @@ train_predict = predict(object = train_fit, new_data = train) %>% #predict the t
   mutate(pred = case_when(
     .pred >= 0.5 ~ 1, 
     .pred < 0.5 ~ 0
-  ))
+  )) 
 ```
 
 ```{r}
@@ -213,3 +213,7 @@ ggplot(test_predict) +
   geom_jitter(aes(habitat, pred)) +
   theme_bw()
 ```
+
+Why did it do so badly? 
+
+1. This is a logistic regression! Therefore a classification
