--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -70,6 +70,8 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   [Demo](https://github.com/MaRo406/eds-232-machine-learning/blob/main/labs/Lab3_Demo.Rmd)
 
+    -   [Demo key](https://github.com/MaRo406/eds-232-machine-learning/blob/main/labs/Lab3_Demo.Rmd)
+
 -   [Assignment](https://github.com/MaRo406/eds-232-machine-learning/blob/main/labs/Lab3.Rmd)
 
 ### Discussion:
